--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/style/main.css" />
-    <script type="module" src="src/js/main.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
 
     <title>forkify // Search over 1M recipes</title>
   </head>
