--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="./src/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="./src/style/main.css" />
-    <script type="module" src="./src/js/main.js"></script>
+    <link rel="stylesheet" href="src/style/main.css" />
+    <script type="module" src="src/js/main.js"></script>
 
     <title>forkify // Search over 1M recipes</title>
   </head>
